melhoria, opçao de grupos e tela de grupos para gerenciamento detalhado